src/objects/Main_Report_Data__c.object
<CustomObject>
    <description>Used to support the consolidation of data for ExAM to Wave automation.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is for what we are taking survey its a school or facility within a school.They have hierarchical relationship</inlineHelpText>
        <label>School or Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Main Report Data</relationshipLabel>
        <relationshipName>Main_Report_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question_Template__c</referenceTo>
        <relationshipLabel>Main Report Data</relationshipLabel>
        <relationshipName>Main_Report_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire Response</label>
        <referenceTo>Questionnaire_Response__c</referenceTo>
        <relationshipLabel>Main Report Data</relationshipLabel>
        <relationshipName>Main_Report_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To get the super section and subsection and also we can identify the groups</description>
        <inlineHelpText>To get the super section and subsection and also we can identify the groups</inlineHelpText>
        <label>Section and Subsection</label>
        <referenceTo>Section_Template__c</referenceTo>
        <relationshipLabel>Main Report Data</relationshipLabel>
        <relationshipName>Main_Report_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Main Report Data</label>
    <nameField>
        <label>Main Report Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Main Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>